spacing about me info fixed, i hope

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ img.aboutImage{
 }
 
 .aboutText{
-	margin-top: -25px;
+	margin-top: -70px;
 	width: 650px;
 }
 
